[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pongclock"
version = "0.1.0"
description = "A terminal clock played as an endless game of Pong"
requires-python = ">=3.10"
dependencies = ["textual>=0.80"]

[project.scripts]
pongclock = "pong_clock:main"

[tool.setuptools]
py-modules = ["pong_clock"]
