[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pongclock"
version = "0.1.0"
description = "A terminal clock played as an endless game of Pong"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ChomChomp" }]
keywords = ["clock", "pong", "terminal", "textual", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
]
dependencies = ["textual>=0.80"]

[project.urls]
Homepage = "https://github.com/ChomChomp/pongclock"
Issues = "https://github.com/ChomChomp/pongclock/issues"
Source = "https://github.com/ChomChomp/pongclock"

[project.scripts]
pongclock = "pong_clock:main"

[tool.setuptools]
py-modules = ["pong_clock"]
